# phoebus

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EIDR.md  GOVERNANCE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
HEAD/: .buildinfo  genindex.html  index.html  search.html
Tests/Reader/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  main.cpp  main.cpp~  reader.cpp  reader.cpp~  reader.hpp  reader.hpp~
adi_test/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
cmake/: Fluid.cmake  Geometry.cmake  Radiation.cmake  Transport.cmake
doc/: index.html  machine-specific-build-instructions.md
inputs/: advection.pin  bad_ode_state.txt  blandford_mckee.pin  blast_wave.pin  blast_wave_2d.pin  blast_wave_3d.pin  bondi.pin  boosted_bondi.pin  ccsn.pin  cross_beam.pin  friedmann.pin  hohlraum.pin  homogeneous_sphere.pin  homologous.pin  homologous.pin~  hydro_modes.pin  janka_lightbulb.pin  kh.pin  leptoneq.pin  linear_modes.pin  linear_modes_3d.pin  mhd_modes.pin  mhd_shocktube.pin  mmsacc.pin  mocmc_advection.pin  p2c2p.pin  pns.pin  pns_test.pin  progenitor.pin  rotor.pin  (+19 more)
src/: CMakeLists.txt  compile_constants.hpp.in  con2prim.cpp  con2prim.hpp  fluid.cpp  fluid.hpp  initial_conditions.cpp  initial_conditions.hpp  main.cpp  phoebus_driver.cpp  phoebus_driver.hpp  phoebus_package.cpp  phoebus_package.hpp  reconstruction.hpp  update-coords-names.txt
src/Z4c/: Z4c.cpp  Z4c.hpp  Z4c_eqn.cpp  Z4c_utils.cpp  fd_compute.hpp  fd_stencil.hpp  z4c.cpp  z4c.hpp  z4c_benchmark.cpp  z4c_eqn.cpp  z4c_utils.cpp
src/analysis/: analysis.cpp  analysis.hpp  history.cpp  history.hpp  history_utils.hpp
src/ccsn/: ccsn.cpp  ccsn.hpp
src/fixup/: fixup.cpp  fixup.hpp  fixup_applier.hpp  fixup_c2p.cpp  fixup_netfield.cpp  fixup_particles.cpp  fixup_radc2p.cpp  fixup_src.cpp
src/fluid/: con2prim.cpp  con2prim.hpp  con2prim_classic.hpp  con2prim_mm.hpp  con2prim_robust.hpp  con2prim_statistics.cpp  con2prim_statistics.hpp  con2prim_vanderholst.hpp  fluid.cpp  fluid.hpp  prim2con.hpp  riemann.cpp  riemann.hpp  tmunu.cpp  tmunu.hpp
src/geometry/: analytic_system.hpp  boosted_minkowski.cpp  boosted_minkowski.hpp  boyer_lindquist.cpp  boyer_lindquist.hpp  cached_system.hpp  coordinate_systems.hpp  flrw.cpp  flrw.hpp  fmks.cpp  fmks.hpp  geometry.cpp  geometry.hpp  geometry_defaults.hpp  geometry_utils.hpp  geometry_variant.hpp  inchworm.cpp  inchworm.hpp  lumpy.cpp  lumpy.hpp  mckinney_gammie_ryan.cpp  mckinney_gammie_ryan.hpp  minkowski.cpp  minkowski.hpp  modified_system.hpp  monopole.cpp  monopole.hpp  sks.cpp  sks.hpp  snake.cpp  snake.hpp  sph2cart.cpp  sph2cart.hpp  spherical_kerr_schild.cpp  spherical_kerr_schild.hpp  spherical_minkowski.cpp  spherical_minkowski.hpp  tetrads.hpp
src/gr1d/: gr1d.cpp  gr1d.hpp  gr1d_utils.hpp
src/microphysics/eos/: eos.cpp
src/microphysics/eos_phoebus/: eos_phoebus.cpp  eos_phoebus.hpp
src/microphysics/opac_phoebus/: opac_phoebus.cpp  opac_phoebus.hpp
src/monopole_gr/: interp_3d_to_1d.hpp  monopole_gr.cpp  monopole_gr.hpp  monopole_gr_base.hpp  monopole_gr_interface.hpp  monopole_gr_utils.hpp
src/pgen/: advection.cpp  blandford_mckee.cpp  bondi.cpp  boosted_bondi.cpp  ccsn.cpp  check_cached_geom.cpp  cross_beam.cpp  friedmann.cpp  hohlraum.cpp  homogeneous_sphere.cpp  homologous.cpp  homologous.cpp~  hydro_modes.cpp  janka_lightbulb.cpp  kh.cpp  leptoneq.cpp  linear_modes.cpp  mmsacc.cpp  p2c2p.cpp  pgen.cpp  pgen.hpp  progenitor.cpp  radiation_advection.cpp  radiation_equilibration.cpp  rhs_tester.cpp  rotor.cpp  sedov.cpp  shock_tube.cpp  sod.cpp  standing_accretion_shock.cpp  thin_cooling.cpp  torus.cpp  tov.cpp
src/phoebus_boundaries/: phoebus_boundaries.cpp  phoebus_boundaries.hpp
src/phoebus_utils/: adiabats.hpp  ascii_reader.cpp  ascii_reader.hpp  cell_locations.hpp  debug_utils.hpp  grid_utils.hpp  history.hpp  initial_model_reader.cpp  initial_model_reader.hpp  interpolation.hpp  linear_algebra.hpp  loop.hpp  phoebus_interpolation.hpp  preprocessor_utils.hpp  programming_utils.hpp  reduction.hpp  relativity_utils.hpp  robust.hpp  root_find.hpp  unit_conversions.cpp  unit_conversions.hpp  valencia_cowling.hpp  variables.hpp
src/progenitor/: ascii_reader.cpp  ascii_reader.hpp  progenitordata.cpp  progenitordata.hpp
src/radiation/: axion_constants.hpp  closure.hpp  closure_m1.hpp  closure_mocmc.hpp  closure_test.cpp  cooling_function.cpp  frequency_info.hpp  geodesics.hpp  janka_lightbulb.cpp  kd_grid.hpp  light_bulb_constants.hpp  local_three_geometry.hpp  mocmc.cpp  mocmc.hpp  moment_test.cpp  moments.cpp  moments.hpp  moments_source.cpp  monte_carlo.cpp  opacity.hpp  opacity_averager.hpp  radiation.cpp  radiation.hpp  source_residual_1.hpp  source_residual_4.hpp
src/tally/: history.hpp  history_utils.hpp
src/tov/: tov.cpp  tov.hpp
src/tracers/: tracers.cpp  tracers.hpp
tst/: CMakeLists.txt  formatting.py  phoebus_unit_test_main.cpp  test_utils.hpp
tst/integration/: README.md
tst/regression/: README.md  bondi.gold  bondi.py  friedmann.gold  friedmann.py  homogeneous_sphere.gold  homogeneous_sphere.py  linear_modes.gold  linear_modes.py  mocmc_diffusion.gold  mocmc_diffusion.py  mocmc_equilibration.gold  mocmc_equilibration.py  radiation_diffusion.gold  radiation_diffusion.py  radiation_equilibration.gold  radiation_equilibration.py  regression.py  regression_test.py  suite.py  testscript.py  thincooling.gold  thincooling.py  thincooling_coolingfunction.gold  thincooling_coolingfunction.py  torus.gold  torus.py  tracer_advection.gold  tracer_advection.py
tst/regression/run/: test_input.pin
tst/unit/: CMakeLists.txt  README.md
tst/unit/geometry/: CMakeLists.txt  test_geometry.cpp  test_tetrads.cpp
tst/unit/gr1d/: CMakeLists.txt  test_gr1d.cpp
tst/unit/monopole_gr/: CMakeLists.txt  test_interp_3d_to_1d.cpp  test_monopole_gr.cpp
tst/unit/phoebus_utils/: CMakeLists.txt  compile_constants.hpp  test_adiabats.cpp  test_reader.cpp  test_relativity_utils.cpp
tst/unit/radiation/: CMakeLists.txt  test_closure.cpp
(+310 files in other folders)
