cmake_minimum_required(VERSION 3.10)
project (reader)
include_directories(/home/mari/Work/Phoebus/phoebus/Tests/Reader/)
add_executable (output /home/mari/Work/Phoebus/phoebus/Tests/Reader/reader.cpp /home/mari/Work/Phoebus/phoebus/Tests/Reader/main.cpp /home/mari/Work/Phoebus/phoebus/Tests/Reader/reader.hpp) 
